--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "description": "",
   "devDependencies": {
     "grunt": "^1.6.1"
+  },
+  "dependencies": {
+    "grunt-concurrent": "^3.0.0",
+    "grunt-contrib-less": "^3.0.0",
+    "grunt-contrib-sass": "^2.0.0"
   }
 }
