--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "devDependencies": {
     "grunt": "^1.6.1",
-    "grunt-contrib-clean": "^2.0.1"
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-contrib-uglify": "^5.2.2"
   },
   "dependencies": {
     "grunt-concurrent": "^3.0.0",
